# dash_projeto_final

./: .gitignore  README.md  app.py  app_referencia.py  clean_output.parquet  data_modeling.ipynb  datavisualization.ipynb  pyproject.toml
